erDiagram
    %% Scheduling domain writes:  audit_request, audit, outbox_event
    %% Catalogue, insert-only here (A10):  supplier, site
    %% Read-only here (maintained elsewhere):  client, auditor
    %% Notification component (separate concern, §04):  notification_dispatch

    supplier {
        uuid id PK
        text name "unique"
    }
    site {
        uuid id PK
        uuid supplier_id FK
        text name "unique; one supplier, never re-parented"
    }
    client {
        uuid id PK
        text name
        text contact_email
        text subscription_level_code "ESSENTIALS|ADVANCED|PREMIUM"
        date subscription_valid_until
    }
    auditor {
        uuid id PK
        text name
        boolean active
    }
    audit_request {
        uuid id PK
        uuid client_id FK
        uuid site_id FK
        uuid audit_id FK "null while PENDING"
        timestamptz requested_at
        text subscription_level_code "frozen (A6, A9)"
        date earliest_audit_date "frozen"
        date latest_audit_date "frozen deadline"
        date available_to_client_at "null until attached; reconciled at publication"
        text status "PENDING|SCHEDULED|FULFILLED|UNSCHEDULABLE|CANCELLED"
        text cancellation_reason "null unless CANCELLED"
        text idempotency_key
        timestamptz created_at
        timestamptz updated_at "trigger-maintained"
    }
    audit {
        uuid id PK
        uuid site_id FK
        uuid auditor_id FK
        date audit_date "UNIQUE with auditor_id"
        int audit_duration_days "default 1"
        int processing_duration_days "default 7"
        date published_at "null until published"
        date valid_until "published_at + 1 year"
        text report_uri "null until published"
        text status "SCHEDULED|IN_PROGRESS|PUBLISHED|DISCARDED"
        timestamptz created_at
        timestamptz updated_at "trigger-maintained"
    }
    outbox_event {
        uuid id PK
        text aggregate_type
        uuid aggregate_id "no FK by design (A8)"
        text event_type
        jsonb payload
        timestamptz occurred_at
        timestamptz published_at "null until relayed"
    }
    notification_dispatch {
        uuid event_id PK "= outbox_event.id, no FK"
        text channel "email"
        text recipient
        text status "CLAIMED|SENT|FAILED"
        timestamptz created_at
        timestamptz sent_at
    }

    supplier ||--o{ site          : "owns"
    site     ||--o{ audit_request : "targeted by"
    site     ||--o{ audit         : "audited by"
    client   ||--o{ audit_request : "raises"
    auditor  ||--o{ audit         : "performs"
    audit    |o--o{ audit_request : "fulfils"
